# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  const.py  engine.py  randomizer.py
brain_games/games/: calc.py  calculater.py  even.py  even_odd.py  gcd.py  pg.py  prime.py  progression.py
brain_games/scripts/: brain-gcd.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_pg.py  brain_prime.py  brain_progression.py
